2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/peeph.def:
	  Improve elimination of branches.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.
	* src/z80/gen.c:
	  More verbose debugging for variables that are not in registers, but should be.

2012-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: added r3ka and s08 to installer
	* support/sdbinutils/binutils/configure.in,
	* support/sdbinutils/binutils/configure: fix bug #3527589
	* src/SDCCcse.c (newCseDef): fix bug #3528899

2012-05-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.

2012-05-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Preparations for further pointer offset
	   optimizations

2012-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/peeph.def:
	  Allow disabling of tail-call and jump to return optimization.

2012-05-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed inconsistent offsets for 16-bit register
	  accesses. Removed broken and unused AOP_STR type. Prohibit loading
	  h via hx from volatile operands.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c,
	  src/z80/gen.c,
	  src/port.h,
	  src/SDCCglue.c,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Use lsidr for built-in memset() for r3ka.
	* src/hc08/gen.c:
	  Use ldhx, sthx for memory-to-memory assignment and cast.
	* src/hc08/peeph.def:
	  Basic tail call optimization.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  More efficient loading of H and HX for hc08 and s08.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/setjmp.c:
	  Enable test for r3ka.
	* support/regression/tests/gcc-torture-execute-pr28982a.c,